# cawlr-rs

./: .dockerignore  .gitattributes  .gitignore  .rustfmt.toml  404.html  Cargo.toml  Dockerfile  LICENSE  README  README.md  arrow.html  docker.html  docker.sh  index.html  installation.html  intro.html  justfile  musl.Dockerfile  pickle.html  print.html  searchindex.js  searchindex.json
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml  musl.yml  pages.yml  publish-centos7.yml  publish-linux.yml  publish-macos.yml  publish.yml  release.yml  rust.yml
analyze-region-pipeline/: Cargo.toml
analyze-region-pipeline/src/: file_types.rs  main.rs  preprocess.rs
analyze-region-pipeline/src/analyze/: cmd.rs  mod.rs
analyze-region-pipeline/src/preprocess/: mod.rs
cawlr/: Cargo.toml
cawlr/src/: file.rs  main.rs
cawlr/src/cmd/: collapse.rs  mod.rs  score.rs  train.rs
cawlr/src/pipeline/: external.rs  mod.rs  preprocess.rs  train_ctrls.rs  train_ctrls_pipeline.rs  utils.rs
cawlr/src/pipeline/analyze/: cmd.rs  mod.rs
dockerfiles/: centos7.Dockerfile  dimelo cuda12.Dockerfile  dimelo.Dockerfile  ubuntu20.Dockerfile
extra/: neg_control.bam  neg_control.bam.bai  neg_control.eventalign.txt  pos_control.bam  pos_control.bam.bai  pos_control.eventalign.txt  sacCer3.fa  sacCer3.fa.fai  single_read.bam  single_read.bam.bai  single_read.eventalign.txt
extra/modbams/: MM-double.bam  filtered.bam  megalodon-modbam.bam  reverse-read.bam
filter-overmod/: Cargo.toml
filter-overmod/src/: main.rs
guide/: book.toml
guide/src/: SUMMARY.md  arrow.md  docker.md  pickle.md
mod-bam-pct/: Cargo.toml
mod-bam-pct/src/: main.rs
notebooks/: agg_comparison.py  agg_plot.ipynb  clb5_cawlr_cluster.ipynb  clb5_mesmlr_cluster.ipynb  clb6_cawlr_cluster.ipynb  clb6_mesmlr_cluster.ipynb  cln1_cawlr_cluster.ipynb  cln1_mesmlr_cluster.ipynb  cluster_region.py  clustering.ipynb  score_dist.ipynb  split_by_strand.py
scripts/: agg_comparison.py  cluster_region.py  mod-bam-dist.py  plot_scoring_dist.py  read_arrow.py  rw_score_arrow.py
src/: agg_blocks.rs  arrow.rs  arrow_utils.rs  bkde.rs  collapse.rs  context.rs  filter.rs  index.rs  lib.rs  main.rs  motif.rs  plus_strand_map.rs  preprocess.rs  rank.rs  reads.rs  region.rs  reservoir.rs  score.rs  score_model.rs  sma.rs  strand_map.rs  sum_score.rs  train.rs  utils.rs  validated.rs
src/arrow/: arrow_utils.rs  eventalign.rs  io.rs  metadata.rs  mod.rs  mod_bam.rs  polars_eventalign.rs  scored_read.rs  signal.rs
src/arrow/mod_bam/: ml.rs  mm_tag.rs  mod.rs
src/npsmlr/: mod.rs  score.rs  train.rs
tests/: integration.rs  integration_modbam.rs  integration_npsmlr.rs  pipeline.rs  test_preprocess.rs  train.rs
