#cargo-features = ["profile-rustflags"]

[package]
name = "libcawlr"
version = "0.4.0"
edition = "2021"
authors = ["Brandon Saint-John <bsaintjo@ucsc.edu>"]
readme = "README.md"
description = "cawlr: Chromatin accessibility with long reads"
license = "BSD-3-Clause"
rust-version = "1.56.1"
categories = ["science", "command-line-utilities"]

[workspace]
members = ["analyze-region-pipeline"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
clap = { version = "4.0.7", features = ["derive"] }
fnv = "1.0.7"
log = "0.4.17"
eyre = "0.6.8"

[dependencies]
# Output format for intensive data results
arrow2 = { version = "0.14.1", features = ["io_ipc", "io_ipc_compression"] }
arrow2_convert = { version = "0.3.2", features = [
    "derive",
    "arrow2_convert_derive",
] }

# Read genomic sequences from FASTA file
bio = "1.0.0"
bio-types = "0.13.0"

# Command line parsing
clap = { workspace = true }
clap-verbosity-flag = "2.0.0"

# Provides kernel density estimate calculations
criterion-stats = "0.3.0"

# Parsing nanopolish eventalign output
csv = "1.1.6"

# Faster HashMaps
fnv = "1.0.7"

# Progress reporting
indicatif = { version = "0.17.1", features = ["improved_unicode"] }
itertools = "0.10.5"

# Gaussian Mixture Mdoesl
linfa = { version = "0.6.0", features = ["openblas-static"] }
linfa-clustering = { version = "0.6.0" }

# Logging support
log = "0.4.17"
env_logger = "0.9.1"

# Optional allocator to get speed ups
mimalloc = { version = "0.1.29", default-features = false, optional = true }

# Arrays for ML and DP Alignment
# nalgebra = "0.31.1"
ndarray = { version = "0.15.6", features = ["blas"] }
openblas-src = { version = "0.10.5", features = ["static"] }


rand = { version = "0.8.5", features = ["small_rng", "alloc"] }

# Saveable gaussian components and calculation of KL divergence
rv = { version = "0.14.3", features = ["serde1"] }

# nanopolish eventalign output parsing
serde = "1.0.145"

# Output format for outputs not data-intensive, cawlr train & rank.
serde-pickle = "1.1.1"

# Deals with eventalign tsv having to split columns to extract pA measurements
serde_with = "2.0.1"

# Parse bam files to extract strand information
bam = "0.1.4"

# Calculate mean of signal data, median of data
statrs = "0.16.0"

# Parallelize training and other hot loops
rayon = "1.5.3"

# Error reporting
eyre = "0.6.8"
jane-eyre = "0.3.0"
thiserror = "1.0.37"
human-panic = "1.0.3"
num_cpus = "1.13.1"

# Finding binaries by default for pipeline tools
which = "4.3.0"
simple-logging = "2.0.2"
rusqlite = { version = "0.28.0", features = ["bundled"] }

# Fix problem with older gcc?
# Related issue: https://github.com/gyscos/zstd-rs/issues/177
zstd-sys = "=2.0.4"
glob = "0.3.1"

# Embedded database for storing parsed samples
# typed-sled = { version = "0.2.0", git = "https://github.com/bsaintjo/typed-sled", branch = "impl-mergeoperator"}
# sled = "0.34.7"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
#rustflags = ["-C", "target-cpu=native"]

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
test-log = "0.2.11"
escargot = "0.5.7"
tempfile = "3.3.0"
float_eq = "1.0.0"
predicates = "2.1.1"
pretty_assertions = "1.3.0"
quickcheck = "1.0.3"

[features]
default = []
fast = ["mimalloc"]

[[bin]]
name = "convert-detection"
path = "src/bin/convert_detection.rs"

[[bin]]
name = "agg-blocks"
path = "src/bin/agg_blocks.rs"

[[bin]]
name = "analyze-region-pipeline-internal"
path = "src/bin/analyze_region_pipeline.rs"

[[bin]]
name = "analyze-region-mesmlr-detection-pipeline"
path = "src/bin/analyze_region_mesmlr_detection_pipeline.rs"

[[bin]]
name = "overlap-bed"
path = "src/bin/overlap_bed.rs"

[[bin]]
name = "cawlr"
path = "src/bin/cawlr.rs"

[[bin]]
name = "train-ctrls-pipeline"
path = "src/bin/train_ctrls_pipeline.rs"
