[package]
name = "analyze-region-pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcawlr = { path = ".." }
clap = { workspace = true }
eyre = { workspace = true }
fnv = { workspace = true }
glob = "0.3.1"
log = { workspace = true }
miette = { version = "5.5.0", features = ["fancy"] }
simple-logging = "2.0.2"
