[package]
name = "cawlr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcawlr = { path = ".." }
clap = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
clap-verbosity-flag = "2.0.0"
human-panic = "1.1.0"
jane-eyre = "0.3.0"
env_logger = "0.10.0"
rayon = "1.6.1"
num_cpus = "1.15.0"
simple-logging = "2.0.2"
glob = "0.3.1"
fnv.workspace = true
