[package]
name = "filter-overmod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
env_logger = "0.11.3"
eyre.workspace = true
jane-eyre = "0.3.0"
log.workspace = true
noodles = { version = "0.36.0", features = ["bam", "sam"] }
rust-htslib = "0.46.0"
