[package]
name = "mod-bam-pct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio-types = "0.13.0"
clap.workspace = true
csv = "1.1.6"
miette = { version = "5.5.0", features = ["fancy"] }
num-format = "0.4.4"
rust-htslib = "0.40.2"
serde = { version = "1.0.152", features = ["derive"] }
