[package]
name = "mod-bam-pct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio-types = "1.0.1"
clap.workspace = true
csv = "1.1.6"
miette = { version = "7.2.0", features = ["fancy"] }
num-format = "0.4.4"
rust-htslib = "0.46.0"
serde = { version = "1.0.152", features = ["derive"] }
